# CrawlLens

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  scraping_history.json
src/crawllens/: __init__.py  cli.py  config.py  logging_config.py
src/crawllens/core/: crawl.py  extract.py  robots.py  session.py  sitemap.py
src/crawllens/storage/: history.py  writers.py
src/crawllens/ui/: gui.py
src/crawllens/utils/: io.py  net.py  urls.py
tests/: test_extract.py  test_robots.py  test_sitemap.py  test_urls.py
